<resources>
    <string name="app_name">Swift Errand</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="swift_errand">swift_errand</string>
    <string name="swifterrand">swifterrand</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="Id_No">Id No</string>
    <string name="password">Password\n</string>
    <string name="submit">Submit</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number\n</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome To SwiftErrand</string>
    <string name="welcome">Welcome!</string>
    <string name="logo2">Logo</string>
    <string name="client">Client</string>
    <string name="customer">Customer</string>
    <string name="swifter">Swifter</string>
    <string name="laundry">Laundry</string>
    <string name="popular">Popular Errands</string>
    <string name="profile">Uder profile</string>
    <string name="message">message</string>
    <string name="notification">Notification\n</string>
    <string name="payment_icon">Payment_icon\n</string>
    <string name="add_icon">add_icon</string>
    <string name="rate_icon">Rate_Icon</string>
    <string name="laundry_icon">Laundry_icon</string>
    <string name="shoping_icon">Shopping icon\n</string>
    <string name="shoping">shoping</string>
    <string name="housekeeping">House Keeping</string>
    <string name="housekeeping_icon">Housekeping_icon</string>
    <string name="cooking">Cooking\n</string>
    <string name="cooking_icon">Cooking_icon</string>
    <string name="name">Name</string>
    <string name="greeting">Greeting</string>
    <string name="hello">Hello Swifter</string>
    <string name="notifications">Notifications</string>
    <string name="notification_icon">notification icon</string>
    <string name="message_icon">message icon\n</string>
    <string name="categgories">Categories</string>
    <string name="search">Search for Service</string>
</resources>