<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".Client">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:contentDescription="@string/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.844"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026"
                app:srcCompat="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="129dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:text="@string/laundry"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView9"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.419"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="124dp"
                android:layout_height="106dp"
                android:contentDescription="@string/laundry_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.44"
                app:srcCompat="@drawable/laundrymachine" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="265dp"
                android:layout_height="36dp"
                android:text="@string/categgories"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.253"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.341" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="138dp"
                android:layout_height="99dp"
                android:contentDescription="@string/shoping_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.607"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.431"
                app:srcCompat="@drawable/onlineshopping" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="154dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:text="@string/shoping"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.891"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                app:layout_constraintVertical_bias="0.003" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="135dp"
                android:layout_height="103dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/housekeeping_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.134"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.672"
                app:srcCompat="@drawable/housekeeping" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="135dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="112dp"
                android:text="@string/housekeeping"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="136dp"
                android:layout_height="104dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cooking_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.84"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.667"
                app:srcCompat="@drawable/cooking" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="148dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:text="@string/cooking"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView10"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="161dp"
                android:layout_height="42dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <ImageView
                android:id="@+id/MessageIcon"
                android:layout_width="55dp"
                android:layout_height="43dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/message_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976"
                app:srcCompat="@drawable/baseline_message_24" />

            <ImageView
                android:id="@+id/NotificationIcon"
                android:layout_width="61dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/notification_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.245"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.862"
                app:srcCompat="@drawable/baseline_notifications_24" />

            <ImageView
                android:id="@+id/PaymentIcon"
                android:layout_width="55dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/payment_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.765"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.973"
                app:srcCompat="@drawable/baseline_payments_24" />

            <ImageView
                android:id="@+id/RateIcon"
                android:layout_width="53dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/rate_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.99"
                app:layout_constraintStart_toStartOf="@+id/MessageIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.979"
                app:srcCompat="@drawable/baseline_rate_review_24" />

            <ImageView
                android:id="@+id/AddIcon"
                android:layout_width="66dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/add_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.979"
                app:srcCompat="@drawable/baseline_add_circle_outline_24" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="151dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:text="@string/greeting"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="405dp"
                android:layout_height="66dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.24" />

            <EditText
                android:id="@+id/editTextTextMultiLine4"
                android:layout_width="322dp"
                android:layout_height="53dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/search"
                android:inputType="textMultiLine"
                android:textColorHint="#616161"
                app:layout_constraintBottom_toBottomOf="@+id/searchView"
                app:layout_constraintEnd_toEndOf="@+id/searchView"
                app:layout_constraintStart_toStartOf="@+id/searchView"
                app:layout_constraintTop_toTopOf="@+id/searchView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>